<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">益农社</string>
    <string name="dbs_desc">益农社</string>
    <string name="action_settings">Settings</string>
    <!-- 登陆页面 loginActivity -->
    <string name="commonBarText">益农社</string>
    <string name="unloginTitle">搜索益农社、信息资讯</string>
    <string name="loginTitle">益农社-已登录</string>
    <string name="newsTitle">新闻</string>
    <string name="serviceTitle">服务</string>
    <string name="myTitle">我的</string>
    
    <string name="irs_positive">确定</string>
    <string name="login">登		陆</string>
    <string name="register">立即注册</string>
    <string name="findBack">找回密码？</string>
    <string name="inputLoginName">请输入用户名</string>
    <string name="inputPassword">请输入密码</string>
    
    <string name="loading">loading</string>
    <string name="tab_menu_news">提醒</string>

    <!-- 导航栏菜单名 -->
    <string name="home_text">首页</string>
    <string name="news_text">新闻</string>
    <string name="yns_text">益农社</string>
    <string name="my_text">我的</string>
    
    <!-- 首页 -->
    <string name="dbs_subnav1">信息集市</string>
    <string name="dbs_subnav2">益农社</string>
    <string name="dbs_subnav3">三农风光</string>
    <string name="dbs_subnav4">企业库</string>
    <string name="dbs_subnav5">农事天气</string>

    <string name="dbs_home_name">名企名品</string>
    <string name="dbs_more">更多</string>
    <string name="home_search">请输入搜索内容</string>
    <string name="home_search_cancle">cancle</string>
    <string name="employ_msg_tv">用工信息</string>
    <string name="findjob_msg_tv">求职信息</string>
    <string name="supply_msg_tv">供应信息</string>
    <string name="seekbuyer_msg_tv">求购信息</string>
    <string name="other_msg_tv">其他</string>


</resources>
