<?xml version="1.0" encoding="utf-8"?>
<!-- 底部导航 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white" >

    <LinearLayout
        android:id="@+id/id_bottom_common"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/id_menu_homeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_home_normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/home_text"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_menu_newsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_news_normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/news_text"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_menu_serviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_service_normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/yns_text"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_menu_myName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/tab_my_normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/my_text"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
   
    <!-- 其它导航1 -->

    <LinearLayout
        android:id="@+id/id_bottom_other"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >
		<TextView
            android:id="@+id/id_menu_homeName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_home_normal"
            android:singleLine="true"
            android:text="@string/home_text"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_menu_newsName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_news_normal"
            android:singleLine="true"
            android:text="@string/news_text"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_menu_serviceName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_service_normal"
            android:singleLine="true"
            android:text="@string/yns_text"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>