<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wzh="http://schemas.android.com/apk/res-auto/com.xj.yns"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/home_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <!--自定义的轮播图  -->
                <com.xj.yns.viewplus.AutoRollLayout
                    android:id="@+id/home_arl"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"></com.xj.yns.viewplus.AutoRollLayout>

            </RelativeLayout>
            <!--  二级导航圆形图+图下面的文字 -->
            <!--  <HorizontalScrollView
                  android:id="@+id/home_hscrollview"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:scrollbars="none"
                  >-->
            <LinearLayout
                android:id="@+id/id_home_subnav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/color_white"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/msg_market"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.xj.yns.viewplus.ImageViewPlus
                        android:id="@+id/imgplus1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/home11"
                        wzh:type="circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/dbs_subnav1"
                        android:textColor="@color/color_black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!--  <LinearLayout
                      android:id="@+id/yns"
                      android:layout_width="80dp"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:padding="8dp"
                      android:orientation="vertical" >

                      <com.xj.yns.viewplus.ImageViewPlus
                          android:id="@+id/imgplus2"
                          android:layout_width="50dp"
                          android:layout_height="50dp"
                          android:src="@drawable/home22"
                          wzh:type="circle"/>

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center_horizontal"
                          android:text="@string/dbs_subnav2"
                          android:textColor="@color/color_black"
                          android:textSize="12sp" />
                  </LinearLayout>-->

                <LinearLayout
                    android:id="@+id/sn_appearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.xj.yns.viewplus.ImageViewPlus
                        android:id="@+id/imgplus3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/home33"
                        wzh:type="circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/dbs_subnav3"
                        android:textColor="@color/color_black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/companylibs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.xj.yns.viewplus.ImageViewPlus
                        android:id="@+id/imgplus4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/home44"
                        wzh:type="circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/dbs_subnav4"
                        android:textColor="@color/color_black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.xj.yns.viewplus.ImageViewPlus
                        android:id="@+id/imgplus5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/home44"
                        wzh:type="circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/dbs_subnav5"
                        android:textColor="@color/color_black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <!--</HorizontalScrollView>-->
            <!--    分割线  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_middle_divider"></LinearLayout>
            <!--    商品列表排序选择及其以下所有 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/color_white"
                android:orientation="vertical">
                <!--    益农社+更多 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/id_home_sort1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/dbs_home_name"
                        android:textColor="@color/color_black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/home_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:drawableRight="@drawable/home_arrow"
                        android:text="@string/dbs_more"
                        android:textColor="@color/color_black"
                        android:textSize="14sp" />
                </RelativeLayout>
                <!--  信息列表展示 gridView -->
                <com.xj.yns.viewplus.MyGridView
                    android:id="@+id/id_yns_home_gview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnWidth="10dp"
                    android:horizontalSpacing="5dp"
                    android:listSelector="@null"
                    android:numColumns="2"
                    android:scrollbars="none"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp"></com.xj.yns.viewplus.MyGridView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
